--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.6",
     "@heroicons/react": "^2.2.0",
     "@tailwindplus/elements": "^1.0.2",
+    "@vercel/speed-insights": "^1.2.0",
     "embla-carousel-react": "^8.6.0",
     "flyonui": "^2.3.1",
     "leaflet": "^1.9.4",
